--- a/my-medusa-storefront/package.json
+++ b/my-medusa-storefront/package.json
@@ -20,7 +20,7 @@
     "@types/react": "17.0.40"
   },
   "dependencies": {
-    "@headlessui/react": "^1.6.1",
+    "@headlessui/react": "^0.0.0-dev.0ce63d8",
     "@hookform/error-message": "^2.0.0",
     "@medusajs/medusa": "^1.6.3",
     "@medusajs/medusa-js": "^1.3.3",
