--- a/my-medusa-storefront/package.json
+++ b/my-medusa-storefront/package.json
@@ -31,6 +31,7 @@
     "@stripe/stripe-js": "^1.29.0",
     "clsx": "^1.1.1",
     "lodash": "^4.17.21",
+    "medusa-payment-paypal": "^1.2.6",
     "medusa-react": "^3.0.1",
     "next": "^12.2.0",
     "react": "17.0.2",
